--- a/matrix-examples/DecisionTree/build.gradle
+++ b/matrix-examples/DecisionTree/build.gradle
@@ -12,6 +12,13 @@ repositories {
     }
 }
 
+task wrapper(type: Wrapper) {
+    def gv = '8.10.2'
+    gradleVersion = gv
+    distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
+    validateDistributionUrl = true
+}
+
 tasks.withType(JavaCompile) {
     options.deprecation = true
 }
@@ -21,12 +28,12 @@ tasks.withType(GroovyCompile) { task ->
 }
 
 dependencies {
-    implementation 'org.apache.groovy:groovy:4.0.22'
+    implementation 'org.apache.groovy:groovy:4.0.23'
     implementation 'se.alipsa.groovy:matrix-core:1.2.4'
     implementation 'se.alipsa.groovy:matrix-datasets:1.0.3'
     implementation 'se.alipsa.groovy:matrix-stats:1.0.1'
     implementation 'se.alipsa.groovy:matrix-charts:1.0.0-SNAPSHOT'
-    testImplementation platform('org.junit:junit-bom:5.11.0')
+    testImplementation platform('org.junit:junit-bom:5.11.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
