--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     implementation 'org.gradle:gradle-tooling-api:8.10.2'
     implementation 'commons-io:commons-io:2.17.0'
     implementation 'se.alipsa:maven-3.9.4-utils:1.0.3'
-    implementation 'org.apache.logging.log4j:log4j-api:2.24.0'
+    //implementation 'org.apache.logging.log4j:log4j-api:2.24.1'
 
     testImplementation groovy
     testImplementation "org.apache.groovy:groovy-sql:$groovyVersion"
@@ -72,8 +72,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.1'
     testImplementation 'org.slf4j:slf4j-simple:2.0.16'
-    testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.24.0'
-    testImplementation 'org.apache.logging.log4j:log4j-core:2.24.0'
+    testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.24.1'
+    testImplementation 'org.apache.logging.log4j:log4j-core:2.24.1'
 }
 
 test {
