--- a/matrix-examples/DecisionTree/build.gradle
+++ b/matrix-examples/DecisionTree/build.gradle
@@ -29,11 +29,21 @@ tasks.withType(GroovyCompile) { task ->
 
 dependencies {
     implementation 'org.apache.groovy:groovy:4.0.23'
-    implementation 'se.alipsa.groovy:matrix-core:1.2.4'
-    implementation 'se.alipsa.groovy:matrix-datasets:1.0.3'
-    implementation 'se.alipsa.groovy:matrix-stats:1.0.1'
-    implementation 'se.alipsa.groovy:matrix-charts:1.0.0-SNAPSHOT'
-    testImplementation platform('org.junit:junit-bom:5.11.2')
+    if (version.contains('SNAPSHOT') && rootProject.name != project.name) {
+        // if we execute the build from the matrix root then we include project dependencies as SNAPSHOTS might not
+        // have been published (or up to date).
+        println "Adding dynamic project dependencies for matrix projects, root: ${rootProject.name}, project: ${project.name}"
+        implementation project(':matrix-core')
+        implementation project(':matrix-datasets')
+        implementation project(':matrix-stats')
+        implementation project(':matrix-charts')
+    } else {
+        implementation 'se.alipsa.groovy:matrix-core:1.2.4'
+        implementation 'se.alipsa.groovy:matrix-datasets:1.0.3'
+        implementation 'se.alipsa.groovy:matrix-stats:1.0.1'
+        implementation 'se.alipsa.groovy:matrix-charts:1.0.0-SNAPSHOT'
+    }
+    testImplementation platform('org.junit:junit-bom:5.11.3')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
