--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -50,6 +50,8 @@ dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.2'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.2'
   testImplementation project(':matrix-datasets')
+  testImplementation('com.fasterxml.jackson.core:jackson-core:2.18.0')
+  testImplementation('com.fasterxml.jackson.core:jackson-databind:2.18.0')
 }
 
 test {
