--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -6,8 +6,12 @@ plugins {
 }
 
 group 'se.alipsa.groovy'
-version '1.0.0-SNAPSHOT'
+version '1.0.0'
 description = "Groovy library for importing and exporting json to and from a Matrix or Grid"
+
+ext.nexusUrl = version.endsWith("SNAPSHOT")
+    ? "https://oss.sonatype.org/content/repositories/snapshots/"
+    : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
 task wrapper(type: Wrapper) {
   def gv = '8.10.2'
@@ -106,6 +110,17 @@ publishing {
           connection = 'scm:git:https://github.com/Alipsa/matrix.git'
           developerConnection = 'scm:git:https://github.com/Alipsa/matrix.git'
         }
+      }
+    }
+  }
+  if (project.ext.properties.sonatypeUsername) {
+    repositories {
+      maven {
+        credentials {
+          username = sonatypeUsername
+          password = sonatypePassword
+        }
+        url = nexusUrl
       }
     }
   }
