--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -1,3 +1,8 @@
+buildscript {
+  dependencies {
+    classpath 'se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT'
+  }
+}
 plugins {
   id 'groovy'
   id 'java-library'
@@ -133,4 +138,13 @@ signing {
   } else {
     project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
   }
+}
+
+if (project.ext.properties.sonatypeUsername) {
+
+  apply plugin: 'nexus-release-plugin'
+  //apply plugin: 'se.alipsa.groovy.NexusReleasePlugin'
+  nexusReleasePlugin.nexusUrl = nexusUrl
+  nexusReleasePlugin.userName = sonatypeUsername
+  nexusReleasePlugin.password = sonatypePassword
 }
