--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -14,7 +14,7 @@ group 'se.alipsa.groovy'
 version '1.0.0'
 description = "Groovy library for importing and exporting json to and from a Matrix or Grid"
 
-ext.nexusUrl = version.endsWith("SNAPSHOT")
+ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
     ? "https://oss.sonatype.org/content/repositories/snapshots/"
     : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
@@ -40,7 +40,7 @@ tasks.withType(GroovyCompile) { task ->
 }
 
 repositories {
-  if (version.contains('SNAPSHOT')) {
+  if (version.toString().endsWith('SNAPSHOT')) {
     mavenLocal()
   }
   mavenCentral()
