--- a/matrix-datasets/build.gradle
+++ b/matrix-datasets/build.gradle
@@ -16,7 +16,7 @@ plugins {
 }
 
 group 'se.alipsa.matrix'
-version '1.1.0-SNAPSHOT'
+version '1.1.0'
 description = "Groovy library common public domain and oss data in matrix format)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -25,7 +25,7 @@ ext.nexusUrl = version.contains("SNAPSHOT")
 
 
 task wrapper(type: Wrapper) {
-    def gv = '8.10.2'
+    def gv = '8.12'
     gradleVersion = gv
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
     validateDistributionUrl = true
@@ -58,8 +58,8 @@ dependencies {
         compileOnly project(':matrix-core')
         testImplementation project(':matrix-core')
     } else {
-        compileOnly('se.alipsa.matrix:matrix-core:2.1.1')
-        testImplementation ('se.alipsa.matrix:matrix-core:2.1.1')
+        compileOnly('se.alipsa.matrix:matrix-core:2.2.0')
+        testImplementation ('se.alipsa.matrix:matrix-core:2.2.0')
     }
 
     testImplementation libs.groovy
