--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -14,13 +14,13 @@ plugins {
 }
 
 group 'se.alipsa.matrix'
-version '1.1.0-SNAPSHOT'
+version '1.1.0'
 description = "Statistical hypothesis tests based on Matrix data."
 
 // For some reason this is required to upgrade the wrapper
 // Change the version and run 'gradle wrapper' to upgrade
 task wrapper(type: Wrapper) {
-  def gv = '8.10.2'
+  def gv = '8.12'
   gradleVersion = gv //version required
   distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
   validateDistributionUrl = true
