--- a/matrix-csv/build.gradle
+++ b/matrix-csv/build.gradle
@@ -14,7 +14,7 @@ plugins {
 }
 
 group 'se.alipsa.matrix'
-version '1.1.0-SNAPSHOT'
+version '1.1.0'
 description = "Groovy library for importing structured text into a matrix"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -24,7 +24,7 @@ ext.nexusUrl = version.contains("SNAPSHOT")
 // For some reason this is required to upgrade the wrapper
 // Change the version and run 'gradle wrapper' to upgrade
 task wrapper(type: Wrapper) {
-  def gv = '8.10.2'
+  def gv = '8.12'
   gradleVersion = gv
   distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
   validateDistributionUrl = true
