--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group 'se.alipsa.matrix'
-version '1.1.0-SNAPSHOT'
+version '1.1.0'
 description = "Groovy library for importing and exporting json to and from a Matrix or Grid"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
@@ -19,7 +19,7 @@ ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
     : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
 task wrapper(type: Wrapper) {
-  def gv = '8.10.2'
+  def gv = '8.12'
   gradleVersion = gv
   distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
   validateDistributionUrl = true
