--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group 'se.alipsa.matrix'
-version '1.1.0-SNAPSHOT'
+version '1.1.0'
 description 'Groovy spreadsheet import/export'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -40,8 +40,8 @@ dependencies {
         compileOnly project(':matrix-core')
         testImplementation project(':matrix-core')
     } else {
-        compileOnly 'se.alipsa.matrix:matrix-core:2.1.1'
-        testImplementation('se.alipsa.matrix:matrix-core:2.1.1')
+        compileOnly 'se.alipsa.matrix:matrix-core:2.2.0'
+        testImplementation('se.alipsa.matrix:matrix-core:2.2.0')
     }
     implementation('org.apache.poi:poi:5.3.0')
     implementation('org.apache.poi:poi-ooxml:5.3.0')
