--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -14,7 +14,7 @@ plugins {
 }
 
 group 'se.alipsa.matrix'
-version '1.1.0'
+version '1.1.1-SNAPSHOT'
 description = "Statistical hypothesis tests based on Matrix data."
 
 // For some reason this is required to upgrade the wrapper
@@ -126,7 +126,7 @@ publishing {
       artifact(javadocJar)
       artifact(sourcesJar)
       pom {
-        name = 'Common datasets'
+        name = 'Matrix Stats'
         description = "${project.description}"
         url = "https://github.com/Alipsa/matrix/matrix-stats"
         licenses {
