--- a/matrix-csv/build.gradle
+++ b/matrix-csv/build.gradle
@@ -126,7 +126,7 @@ publishing {
       artifact(javadocJar)
       artifact(sourcesJar)
       pom {
-        name = 'Groovy Matrix CSV'
+        name = 'Matrix CSV import/export'
         description = "${project.description}"
         url = "https://github.com/Alipsa/matrix/matrix-csv"
         licenses {
