--- a/matrix-datasets/build.gradle
+++ b/matrix-datasets/build.gradle
@@ -123,7 +123,7 @@ publishing {
             artifact(javadocJar)
             artifact(sourcesJar)
             pom {
-                name = 'Common datasets'
+                name = 'Matrix common datasets'
                 description = "${project.description}"
                 url = "https://github.com/Alipsa/matrix/matrix-datasets"
                 licenses {
