--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group 'se.alipsa.matrix'
-version '1.1.0'
+version '1.1.1-SNAPSHOT'
 description = "Groovy library for importing and exporting json to and from a Matrix or Grid"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
