--- a/matrix-csv/build.gradle
+++ b/matrix-csv/build.gradle
@@ -14,7 +14,7 @@ plugins {
 }
 
 group 'se.alipsa.matrix'
-version '1.1.0'
+version '1.1.1-SNAPSHOT'
 description = "Groovy library for importing structured text into a matrix"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
