--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group 'se.alipsa.matrix'
-version '1.1.0'
+version '1.1.1-SNAPSHOT'
 description 'Groovy spreadsheet import/export'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
