--- a/settings.gradle
+++ b/settings.gradle
@@ -20,4 +20,5 @@ include 'matrix-sql'
 include 'matrix-examples:LinearRegression'
 include 'matrix-examples:DecisionTree'
 include 'matrix-tablesaw'
+include 'matrix-parquet'
 
