--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -69,6 +69,10 @@
       <artifactId>matrix-csv</artifactId>
     </dependency>
     <dependency>
+      <groupId>se.alipsa.matrix</groupId>
+      <artifactId>matrix-parquet</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>${junit-jupiter.version}</version>
