WIP: add big query module

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,4 +21,5 @@ include 'matrix-examples:LinearRegression'
 include 'matrix-examples:DecisionTree'
 include 'matrix-tablesaw'
 include 'matrix-parquet'
+include 'matrix-bigquery'
 
