add todo for data conversion, add to bom

--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -73,6 +73,10 @@
       <artifactId>matrix-parquet</artifactId>
     </dependency>
     <dependency>
+      <groupId>se.alipsa.matrix</groupId>
+      <artifactId>matrix-bigquery</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>${junit-jupiter.version}</version>
