Remove the duplicate list for rows and types and rely solely on the column attributes (which fixed a bug in renameColumn in the process). upgrade dependencies, WIP add testcontainers to bom test

--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -81,6 +81,31 @@
       <artifactId>matrix-charts</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <version>1.20.4</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <!-- collides with poi in matrix-spreadsheet -->
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-compress</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>gcloud</artifactId>
+      <version>1.20.4</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>1.20.4</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>${junit-jupiter.version}</version>
