--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -5,18 +5,18 @@ import java.util.concurrent.TimeUnit
 
 buildscript {
   dependencies {
-    classpath 'se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT'
+    classpath('se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT')
   }
 }
 plugins {
-  id 'groovy'
-  id 'java-library'
-  id 'signing'
-  id 'maven-publish'
+  id('groovy')
+  id('java-library')
+  id('signing')
+  id('maven-publish')
 }
 
-group 'se.alipsa.matrix'
-version '2.3.0-SNAPSHOT'
+group = 'se.alipsa.matrix'
+version = '2.3.0-SNAPSHOT'
 description = "Groovy library for working with matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -71,11 +71,11 @@ test {
         TestLogEvent.PASSED,
         TestLogEvent.SKIPPED,
         TestLogEvent.STANDARD_OUT
-    exceptionFormat TestExceptionFormat.FULL
-    showExceptions true
-    showCauses true
-    showStackTraces true
-    showStandardStreams true
+    exceptionFormat = TestExceptionFormat.FULL
+    showExceptions = true
+    showCauses = true
+    showStackTraces = true
+    showStandardStreams = true
 
     // set options for log level DEBUG and INFO
     debug {
@@ -85,7 +85,7 @@ test {
           TestLogEvent.SKIPPED,
           TestLogEvent.STANDARD_ERROR,
           TestLogEvent.STANDARD_OUT
-      exceptionFormat TestExceptionFormat.FULL
+      exceptionFormat = TestExceptionFormat.FULL
     }
     info.events = debug.events
     info.exceptionFormat = debug.exceptionFormat
