--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -1,18 +1,18 @@
 buildscript {
     dependencies {
-        classpath 'se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT'
+        classpath('se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT')
     }
 }
 plugins {
-    id 'groovy'
-    id 'java-library'
-    id 'signing'
-    id 'maven-publish'
+    id('groovy')
+    id('java-library')
+    id('signing')
+    id('maven-publish')
 }
 
-group 'se.alipsa.matrix'
-version '1.2.0-SNAPSHOT'
-description 'Groovy spreadsheet import/export'
+group = 'se.alipsa.matrix'
+version = '1.2.0-SNAPSHOT'
+description = 'Groovy spreadsheet import/export'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
     ? "https://oss.sonatype.org/content/repositories/snapshots/"
@@ -43,8 +43,8 @@ dependencies {
         compileOnly 'se.alipsa.matrix:matrix-core:2.2.0'
         testImplementation('se.alipsa.matrix:matrix-core:2.2.0')
     }
-    implementation('org.apache.poi:poi:5.3.0')
-    implementation('org.apache.poi:poi-ooxml:5.3.0')
+    implementation('org.apache.poi:poi:5.4.0')
+    implementation('org.apache.poi:poi-ooxml:5.4.0')
     implementation 'com.github.miachm.sods:SODS:1.6.7'
 
     testImplementation 'org.apache.logging.log4j:log4j-core:2.24.1'
