--- a/matrix-tablesaw/build.gradle
+++ b/matrix-tablesaw/build.gradle
@@ -2,17 +2,17 @@ import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
 buildscript {
     dependencies {
-        classpath 'se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT'
+        classpath('se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT')
     }
 }
 
 plugins {
-    id 'groovy'
-    id 'java-library'
-    id 'signing'
-    id 'maven-publish'
+    id('groovy')
+    id('java-library')
+    id('signing')
+    id('maven-publish')
     //id('io.github.gradle-nexus.publish-plugin') version '2.0.0'
-    id "com.github.ben-manes.versions" version "0.51.0"
+    id("com.github.ben-manes.versions").version("0.51.0")
 }
 
 group = 'se.alipsa.matrix'
@@ -98,10 +98,10 @@ test {
             TestLogEvent.PASSED,
             TestLogEvent.SKIPPED,
             TestLogEvent.STANDARD_OUT
-        exceptionFormat TestExceptionFormat.FULL
-        showExceptions true
-        showCauses true
-        showStackTraces true
+        exceptionFormat = TestExceptionFormat.FULL
+        showExceptions = true
+        showCauses = true
+        showStackTraces = true
 
         // set options for log level DEBUG and INFO
         debug {
@@ -111,7 +111,7 @@ test {
                 TestLogEvent.SKIPPED,
                 TestLogEvent.STANDARD_ERROR,
                 TestLogEvent.STANDARD_OUT
-            exceptionFormat TestExceptionFormat.FULL
+            exceptionFormat = TestExceptionFormat.FULL
         }
         info.events = debug.events
         info.exceptionFormat = debug.exceptionFormat
