--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     }
     compileOnly libs.groovy
 
-    implementation('com.google.cloud:google-cloud-bigquery:2.47.0')
+    api('com.google.cloud:google-cloud-bigquery:2.47.0')
 
     implementation platform('com.google.auth:google-auth-library-bom:1.30.1')
     implementation 'com.google.auth:google-auth-library-oauth2-http'
