--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.1-SNAPSHOT'
+version = '0.1'
 description = "Groovy library for importing and exporting to and from Google BigQuery to a Matrix"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
