--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '1.0.0-SNAPSHOT'
+version = '0.1'
 description = "Groovy library for plotting with matrix ([][] data)"
 
 task wrapper(type: Wrapper) {
