--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -55,15 +55,15 @@ tasks.withType(GroovyCompile) { task ->
 
 dependencies {
     compileOnly libs.groovy
-    if (version.endsWith('SNAPSHOT')) {
+    //if (version.endsWith('SNAPSHOT')) {
         compileOnly project(':matrix-core')
         testImplementation project(':matrix-core')
         testImplementation project(':matrix-datasets')
-    } else {
+    /*} else {
         compileOnly('se.alipsa.matrix:matrix-core:2.2.0')
         testImplementation('se.alipsa.matrix:matrix-core:2.2.0')
         testImplementation('se.alipsa.matrix:matrix-datasets:1.1.0')
-    }
+    }*/
     implementation 'se.alipsa.groovy:data-utils:1.0.6'
     //implementation 'org.gradle:gradle-tooling-api:8.12' dont think we need this
     implementation 'commons-io:commons-io:2.18.0'
