--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.alipsa.matrix</groupId>
   <artifactId>matrix-bom-tests</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <name>Test of Matrix BOM</name>
   <packaging>jar</packaging>
   <url>https://github.com/Alipsa/matrix</url>
@@ -15,13 +15,6 @@
     <junit-jupiter.version>5.11.4</junit-jupiter.version>
     <slf4j.version>2.0.16</slf4j.version>
   </properties>
-  <repositories>
-    <repository>
-      <!-- TODO, this can be removed after matrix-sql 1.1.1 is released -->
-      <id>gradle</id>
-      <url>https://repo.gradle.org/gradle/libs-releases</url>
-    </repository>
-  </repositories>
   <dependencyManagement>
     <dependencies>
       <dependency>
