--- a/matrix-csv/build.gradle
+++ b/matrix-csv/build.gradle
@@ -52,15 +52,15 @@ repositories {
 }
 
 dependencies {
-  if (version.endsWith('SNAPSHOT')) {
+  //if (version.endsWith('SNAPSHOT')) {
     compileOnly project(':matrix-core')
     testImplementation project(':matrix-core')
     testImplementation project(':matrix-datasets')
-  } else {
+  /*} else {
     compileOnly('se.alipsa.matrix:matrix-core:2.2.0')
     testImplementation('se.alipsa.matrix:matrix-core:2.2.0')
     testImplementation('se.alipsa.matrix:matrix-datasets:1.1.0')
-  }
+  }*/
   api 'org.apache.commons:commons-csv:1.12.0'
   compileOnly libs.groovy
   testImplementation libs.groovy
