--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -16,7 +16,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.3.0'
+version = '2.3.1-SNAPSHOT'
 description = "Groovy library for working with matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
