dont strip out non numeric characters if converting from String to BigDecimal, Double or Float   to support formats such as '7.594000000032963e-05'

--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.alipsa.matrix</groupId>
   <artifactId>matrix-bom-tests</artifactId>
-  <version>1.1.1</version>
+  <version>1.1.2-SNAPSHOT</version>
   <name>Test of Matrix BOM</name>
   <packaging>jar</packaging>
   <url>https://github.com/Alipsa/matrix</url>
