--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     dependencies {
-        classpath 'se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT'
+        classpath 'se.alipsa.groovy:nexus-release-plugin:1.0.1'
     }
 }
 plugins {
