--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -1,7 +1,7 @@
 import org.gradle.internal.os.OperatingSystem
 buildscript {
   dependencies {
-    classpath('se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT')
+    classpath('se.alipsa.groovy:nexus-release-plugin:1.0.1')
   }
 }
 plugins {
