--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -2,7 +2,7 @@ import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
 buildscript {
     dependencies {
-        classpath('se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT')
+        classpath('se.alipsa.groovy:nexus-release-plugin:1.0.1')
     }
 }
 plugins {
